human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_96.wast
(assert_invalid
  (module (func $type-block-value-nested2-br-void-vs-num (result i32)
    (block (result i32) (block (block (br 2 (i32.const 0)))))
  ))
  "type mismatch"
)